# cc-iaas-sdnms

./: .gitignore  README.md  bindep.txt  requirements.txt  setup.cfg  setup.py
cc_iaas_sdnms/: __main__.py
cc_iaas_sdnms/app/: server.py  wsgi.py
cc_iaas_sdnms/conf/: __init__.py  database.py  dispatcher.py
cc_iaas_sdnms/db/: manager.py
cc_iaas_sdnms/resources/: base_resource.py  scores.py
docs/: API-DESIGN-FAQ.md  FUTURE-DEGISN.md  Install.md  Setup-API-Development-on-CentOS.md  Setup-Development-on-CentOS.md  sdnms.mdj
etc/: api-config.ini
etc/apache/: sdnms.conf
etc/sdnms_api/: sdnms_api.ini  sdnms_api_dev.ini  sdnms_api_devel.ini
etc/sdnms_api/backends/: fw_fortinet_v5.6.3.ini
fw_fortinet_v5_6_3/: driver.py
sdnms_api/: config.py  driver.py
sdnms_api/app/: fw_test.py  server.py
sdnms_api/backends/: manager.py
sdnms_api/models/: firewall.py  firewall_address.py  firewall_policy.py  firewall_service.py  manager.py
sdnms_api/resources/: firewall.py  scores.py
