[metadata]
name = cc-iaas-sdnms


[entry_points]
console_scripts =
    cc-iaas-sdnms = cc_iaas_sdnms.app.server:launch

oslo.config.opts =
    cc_iaas_sdnms = cc_iaas_sdnms.conf:list_opts

backend.fw.drivers =
    fw_fortinet_v5_6_3 = fw_fortinet_v5_6_3.driver:Driver

backend.waf.drivers =
    waf_f5_v13_1 = waf_f5_v13_1.driver:Driver 
